# trading-core-types

./: .gitignore  README.md
fixtures/: asset.json  fill.json  market_bar.json  market_quote.json  order.json  order_state.json  position.json
python/: README.md  pyproject.toml
python/src/trading_core/: types.py
typescript/: .gitignore  README.md  package.json  pnpm-lock.yaml  vitest.config.ts
typescript/src/: index.ts
typescript/tests/: compatibility.test.ts  date.bench.ts  index.test.ts
