[project]
name = "trading-core-serdes"
version = "0.1.0"
description = "Python implementation of trading-core types with Pydantic validation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "mypy>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/trading_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
